--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- HELLO WORLD IN HTML -->
     <div id="root">
         <h1>Hello World</h1>
     </div>
+
+    <!-- HELLO WORLD IN JAVASCRIPT -->
+     <script>
+        const h2 = document.createElement("h2"); // <h2></h2>
+        h2.innerHTML = "Hello World in Js";  // <h2>Hello World in Js</h2>
+        const root = document.getElementById('root');
+        root.appendChild(h2)
+        
+     </script>
+
+
 </body>
 </html>
