--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- HELLO WORLD IN HTML -->
     <div id="root">
@@ -12,14 +14,32 @@
     </div>
 
     <!-- HELLO WORLD IN JAVASCRIPT -->
-     <script>
+    <script>
         const h2 = document.createElement("h2"); // <h2></h2>
         h2.innerHTML = "Hello World in Js";  // <h2>Hello World in Js</h2>
         const root = document.getElementById('root');
         root.appendChild(h2)
-        
-     </script>
+    </script>
 
+<!-- HELLO WORLD IN REACT -->
+
+
+    <!-- REACT CDB LINK -->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script>
+        // createElement - take three argument: tag, attribute, children 
+        const h1 = React.createElement('h1',{className:"heading"}, "Helo World in React"); 
+
+        const rootReact = ReactDOM.createRoot(document.getElementById('root'));
+
+        rootReact.render(h1);
+        // key note - in output you will able to see only react not html & js output beacuse eact takes full control of the #root element and clears its content before rendering.This is because React assumes that it has exclusive control over the #root element to ensure predictable updates.
+
+
+    </script>
 
 </body>
+
 </html>
