--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
 
     <!-- HELLO WORLD IN JAVASCRIPT -->
-    <script>
+    <!-- <script>
         const h2 = document.createElement("h2"); // <h2></h2>
         h2.innerHTML = "Hello World in Js";  // <h2>Hello World in Js</h2>
         const root = document.getElementById('root');
         root.appendChild(h2)
-    </script>
+    </script> -->
 
 <!-- HELLO WORLD IN REACT -->
 
@@ -28,7 +28,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <script>
+    <!-- <script>
         // createElement - take three argument: tag, attribute, children 
         const h1 = React.createElement('h1',{className:"heading"}, "Helo World in React"); 
 
@@ -38,7 +38,9 @@
         // key note - in output you will able to see only react not html & js output beacuse eact takes full control of the #root element and clears its content before rendering.This is because React assumes that it has exclusive control over the #root element to ensure predictable updates.
 
 
-    </script>
+    </script> -->
+
+    <script src="App.js"></script>
 
 </body>
 
